--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,9 +1,11 @@
 name: hello-world
 on: push
 jobs:
-  my-run:
+  build:
     runs-on: ubuntu-latest
+    container: gradle:6-jdk11
     steps:
-      - name: first steps
-        run: echo "Hello World"
+      - name: Clone-down
+        uses: actions/checkout@v3
+      - run: chmod +x ci/build-app.sh && ci/build-app.sh
     
