--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -11,3 +11,9 @@ jobs:
         run: chmod +x ci/build-app.sh && ci/build-app.sh
       - name: Test
         run: ci/unit-test-app.sh
+      - name: Upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: code
+          path: .
+          
