--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -16,4 +16,28 @@ jobs:
         with:
           name: code
           path: .
-          
+  docker-image:
+    runs-on: ubuntu-latest
+    needs: [build]
+    permissions:
+      packages: write
+    steps:
+      - name: download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: code
+          path: .
+      - name: Login to docker-image
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and deploy
+        uses: docker/build-push-action@v3
+        with:
+          content: app
+          push: tree 
+          tags: ghcr.io/${{ github.actor }}/micronaut-app:1.0-${{ github.sha }},ghcr.io/${{ github.actor }}/micronaut-app:latest
+
+
