--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,43 +1,52 @@
-name: hello-world
+name: Java CI
 on: push
+env: # Set the secret as an input
+  docker_username: ${{ github.actor }}
+  docker_password: ${{ secrets.GITHUB_TOKEN }}
+  GIT_COMMIT: ${{ github.sha }}
 jobs:
-  build:
+  Clone-down:
+    name: Clone down repo
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
-      - name: Clone-down
-        uses: actions/checkout@v3
-      - name: Build 
-        run: chmod +x ci/build-app.sh && ci/build-app.sh
-      - name: Test
-        run: ci/unit-test-app.sh
-      - name: Upload
-        uses: actions/upload-artifact@v3
-        with:
-          name: code
-          path: .
-  docker-image:
+    - uses: actions/checkout@v3
+    - name: Upload Repo
+      uses: actions/upload-artifact@v3
+      with:
+        name: code
+        path: .
+  Build:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: Clone-down
+    container: gradle:6-jdk11
+    steps:
+    - name: Download code
+      uses: actions/download-artifact@v3
+      with:
+        name: code
+        path: . 
+    - name: Build with Gradle
+      run: chmod +x ci/build-app.sh && ci/build-app.sh
+    - name: Test with Gradle
+      run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
+    - name: Upload Repo
+      uses: actions/upload-artifact@v3
+      with:
+        name: code
+        path: .
+  Docker-image:
+    runs-on: ubuntu-latest
+    needs: [Build]
     permissions:
       packages: write
     steps:
-      - name: download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: code
-          path: .
-      - name: Login to docker-image
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and deploy
-        uses: docker/build-push-action@v3
-        with:
-          content: app
-          push: tree 
-          tags: ghcr.io/${{ github.actor }}/micronaut-app:1.0-${{ github.sha }},ghcr.io/${{ github.actor }}/micronaut-app:latest
-
-
+    - name: Download code
+      uses: actions/download-artifact@v3
+      with:
+        name: code
+        path: .
+    - name: build docker
+      run: chmod +x ci/build-docker.sh && ci/build-docker.sh
+    - name: push docker
+      run: chmod +x ci/push-docker.sh && ci/push-docker.sh
